# ml

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: AbstractFactoryEx.cpp  CMakeLists.txt  LinAlgEx.cpp  LinAlgGPUEx.cu
src/: CMakeLists.txt  Config.hpp.in
src/DNN/: Activation.cpp  Activation.hpp  Layer.cpp  Layer.hpp  LinearActivation.cpp  LinearActivation.hpp
src/UTILS/: AbstractFactory.hpp  LinAlg.cu  LinAlg.hpp  Version.hpp
tests/: AbstractFactoryTest.cpp  CMakeLists.txt  EigenTest.cpp  LinAlgTest.cpp  TestObj.hpp
